# venus-web

./: .gitignore  Cargo.toml  README.md
public/static/ajax/libs/jquery-ztree/3.5/css/default/: zTreeStyle.css
public/static/ajax/libs/jquery-ztree/3.5/css/metro/: zTreeStyle.css
public/static/ajax/libs/jquery-ztree/3.5/css/simple/: zTreeStyle.css
public/static/ajax/libs/summernote/: summernote.css
public/static/ajax/libs/validate/: additional-methods.min.js  messages_zh.min.js
public/static/ruoyi/: login.js
sql/: venus_web.sql
src/: main.rs
src/common/: auth.rs  errors.rs  mod.rs  utils.rs
src/config/: mod.rs
src/controller/: auth_controller.rs  index_controller.rs  login_controller.rs  mod.rs  user_controller.rs
src/dao/: mod.rs
src/domain/: mod.rs
src/dto/: mod.rs
src/service/: mod.rs  user_service.rs
templates/: index.html  login.html  login2.html
